<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:id="@+id/MainLayout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@android:color/holo_green_dark">

        <TextView
            android:id="@+id/tv_s_no"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@android:color/black"
            android:text="@string/s_no"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_s_no"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:text="@string/sender_id_number"/>

        <TextView
            android:id="@+id/tv_account"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_name"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:text="@string/credit_card_number"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_account"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:text="@string/amount"/>

        <TextView
            android:id="@+id/tv_trans_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_amount"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:text="@string/trans_date_time"/>

        <TextView
            android:id="@+id/tv_receive_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_trans_time"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:text="@string/sms_receive_date_time"/>

    </LinearLayout>


   <android.support.v7.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/recyclerview"/>

</LinearLayout>
